Pagination view and func implemented: 1. created Pagination to allow user jump through pages. 2. implemented Pagination component on homepage and profile page. 3. created fetchEventsByUserId func to fetch user events by using filter. 4. fixed some errors of func within order.action.ts. 5. removed unnecessary populate from fetchUserById func. 6. modified some types and added some new types to meet the demand. 7. complemented new css style.

--- a/my-event-app/app/globals.css
+++ b/my-event-app/app/globals.css
@@ -10,6 +10,9 @@
     .no-result {
       @apply text-center !text-base-regular text-light-3;
     }
+    .pagination {
+      @apply mt-10 flex w-full items-center justify-center gap-5;
+    }
 }
 
 @layer base {
